--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,6 @@
-DB_URL=jdbc:mysql://localhost:3306/loja?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+DB_URL=jdbc:mysql://localhost:3306/loja?&serverTimezone=UTC
 DB_USERNAME=root
 DB_PASSWORD=coloque_sua_senha_aqui
+EMAIL_USERNAME=email_aqui
+EMAIL_PASSWORD=coloque_sua_senha_aqui # (senha de app)
+EMAIL_FROM=email_do_remetente_aqui
