[WORK 1.1.6] Implementação da autenticação administrativa com segurança e gerenciamento de estados

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -28,3 +28,11 @@ spring:
 app:
     email:
         from: ${EMAIL_FROM}
+    security:
+        cors:
+            allowed-origins: ${CORS_ALLOWED_ORIGINS:http://localhost:5173}
+        admin:
+            username: ${ADMIN_USERNAME}
+            password: ${ADMIN_PASSWORD}
+            token-secret: ${ADMIN_TOKEN_SECRET}
+            token-expiration-seconds: ${ADMIN_TOKEN_EXPIRATION_SECONDS}
