--- a/backend/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/backend/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -3,4 +3,31 @@
   "type": "java.lang.String",
   "description": "The email address used as the sender in outgoing emails.",
   "defaultValue": ""
+},
+{
+  "name": "app.security.permitir-origens",
+  "type": "java.lang.String",
+  "description": "The allowed origins for CORS.",
+  "defaultValue": "*"
+},
+{
+  "name": "app.security.admin.username",
+  "type": "java.lang.String",
+  "description": "The username for the admin user.",
+  "defaultValue": ""
+}, {
+  "name": "app.security.admin.password",
+  "type": "java.lang.String",
+  "description": "The password for the admin user.",
+  "defaultValue": ""
+}, {
+  "name": "app.security.admin.token-secret",
+  "type": "java.lang.String",
+  "description": "The secret key used to sign admin authentication tokens.",
+  "defaultValue": ""
+}, {
+  "name": "app.security.admin.token-expiration-seconds",
+  "type": "java.lang.Integer",
+  "description": "The expiration time in seconds for admin authentication tokens.",
+  "defaultValue": ""
 }]}
