[WORK 1.1.8] Refatoração do painel administrativo, novas funcionalidades no CRUD para as entidades, remoção do daisyUI e adição da nova identidade visual.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,5 +2,10 @@ DB_URL=jdbc:mysql://localhost:3306/loja?&serverTimezone=UTC
 DB_USERNAME=root
 DB_PASSWORD=coloque_sua_senha_aqui
 EMAIL_USERNAME=email_aqui
-EMAIL_PASSWORD=coloque_sua_senha_aqui # (senha de app)
+EMAIL_PASSWORD=coloque_sua_senha_aqui # senha de app se for gmail
 EMAIL_FROM=email_do_remetente_aqui
+CORS_ALLOWED_ORIGINS=http://localhost:5173 # origem permitida para CORS, ajuste conforme necessário
+ADMIN_USERNAME=nome_de_usuario_admin_aqui
+ADMIN_PASSWORD=senha_admin_aqui
+ADMIN_TOKEN_SECRET=token_secreto_do_admin_aqui-secret
+ADMIN_TOKEN_EXPIRATION_SECONDS=7200 # tempo de expiração do token em segundos (ex: 7200 para 2 horas)
