--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 spring:
     application:
         name: backend
+    banner:
+        location: classpath:banner.txt
 
     datasource:
         url: ${DB_URL}
